# typst-docgen-server

./: .gitignore  README.md  config.toml.example  pyproject.toml  requirements.txt
app/: main.py
app/config/: config.py
app/docgen/: docgen.py  templates.py  typst.py  utils.py
app/service/: auth.py  service.py  types.py
app/signer/: jwt_signer.py  pdf_signer.py
app/templates/example1/: example1.md
app/templates/example1/1.0.0/template/: main.typ
app/templates/example1/1.0.1/: docgen.toml  docgen.typ
app/templates/example1/1.0.1/template/: main.typ
app/templates/example1/2.0.0/: docgen.toml  docgen.typ
app/templates/example1/2.0.0/template/: main.typ
