[project]
name = "typst-docgen-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "gitpython>=3.1.44",
    "pikepdf>=9.7.0",
    "pyhanko[image-support,opentype,pkcs11]>=0.28.0",
    "semantic-version>=2.10.0",
    "toml>=0.10.2",
    "typst>=0.13.1",
]
